@@ -23,6 +23,7 @@ Changes in 4.0beta2:
 - Fix crash in GroupView (226134)
 - Cleanup notifier before closing socket in webinterface plugin, fixes a crash (225956)
 - Make sure that weekdays deselects weekend, and weekend deselects weekdays in scheduler plugin (225952)
+- Don't show 0 KB/s when there is no limit in scheduler plugin (225943)
 
 Changes in 4.0beta1:
 - Make adding multiple trackers at once possible (213194) 
